--- a/style.css
+++ b/style.css
@@ -2,12 +2,14 @@ body {
     background-color:white;
 }
 .nav-container {
-    background-color:rgb(238, 237, 237);
+    border-bottom: 2px solid black;
     display: flex;
     justify-content: space-between;
 }
 
 nav{
+    width: 100%;
+    padding: 3%;
     display: flex;
     justify-content: space-between;
 }
@@ -25,5 +27,16 @@ nav{
 }
 
 .nav-container ul{
+    width: 35%;
     display:flex;
+    justify-content: space-between;
+}
+
+li{
+    list-style-type: none;
+}
+
+a{
+    text-decoration: none;
+    color: inherit;
 }
