--- a/style.css
+++ b/style.css
@@ -85,3 +85,13 @@ main h1{
 .main-border{
     padding: 50px;
 }
+
+footer{
+    text-align: center;
+    padding: 20px;
+    
+}
+
+.sociallinks{
+    border: 1px solid #304960;
+}
