--- a/style.css
+++ b/style.css
@@ -106,6 +106,10 @@ footer{
     width: 50%;
 }
 
+img{
+    max-height:100%; max-width:100%;
+}
+
 .portfolioright{
     border: 1px solid black;
     width: 50%;
