create contact page. still need to fill

--- a/style.css
+++ b/style.css
@@ -101,6 +101,7 @@ footer{
     justify-content: space-between;
     border: 2px solid lightgray;
     border-radius: 10px;
+    margin-bottom: 20px;
 }
 
 .portfolio{
