--- a/style.css
+++ b/style.css
@@ -20,8 +20,18 @@ body {
     }
 }
 
+.hamburger-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 100%;
+    height: 30px;
+}
+
 .hamburger-line {
-    
+    width: 30%;
+    height: 3px;
+    background-color: cornflowerblue;
 }
 
 nav{
