--- a/style.css
+++ b/style.css
@@ -17,21 +17,24 @@ body {
     }
     #mobile-nav {
         display: inherit;
+        width: 20%;
+        align-items: center;
+        
     }
 }
 
 .hamburger-container {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
     width: 100%;
-    height: 30px;
+    height: 60%;
 }
 
 .hamburger-line {
-    width: 30%;
-    height: 3px;
-    background-color: cornflowerblue;
+    width: 40%;
+    height: 5px;
+    background-color: #304960;
 }
 
 nav{
