--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
     }
     #mobile-nav {
         display: inherit;
-        width: 20%;
+        width: 35px;
         align-items: center;
         
     }
@@ -29,12 +29,17 @@ body {
     justify-content: space-around;
     width: 100%;
     height: 60%;
+    align-items: center;
 }
 
 .hamburger-line {
-    width: 40%;
+    width: 100%;
     height: 5px;
     background-color: #304960;
+}
+
+.dropdown{
+    display: none;
 }
 
 nav{
